wip: need more fine tuning

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=TestContainer-PoC
+spring.sql.init.mode=always
+spring.docker.compose.lifecycle-management=start_only
+spring.threads.virtual.enabled=true
